<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsRegistration"
    tools:showIn="@layout/activity_details_registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <EditText
                    android:id="@+id/farmerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/farmer_name"
                    android:padding="10dp"
                    android:text="Kuppusamy"
                    android:textSize="20sp"
                    android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <EditText
                    android:id="@+id/userAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/farmer_age"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:text="20"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <EditText
                    android:id="@+id/farmArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/farm_area"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:text="2000"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <EditText
                    android:id="@+id/harvestingPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/harvesting_period"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/district"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="#000"/>

                <Spinner
                    android:id="@+id/districts_spinner"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:textSize="19sp"
                    android:layout_height="wrap_content" />



            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <EditText
                    android:id="@+id/userNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>




            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:textColorHighlight="#000"
                    android:layout_margin="23dp"
                    android:paddingLeft="1dp"
                    android:id="@+id/consent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:text="@string/consent"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"/>



            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="20dp"
                android:id="@+id/registerfarmer"
                android:textSize="20sp"
                android:text="@string/submit"/>



        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>