<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="#78ff"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ui"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="21sp"/>


        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_margin="15dp"
            app:cardElevation="15dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:background="@drawable/gradient_back"
                    android:layout_height="170dp">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="18dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="16dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:weightSum="9"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/sp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:onClick="speakNews"
                        android:src="@android:drawable/ic_media_play" />

                    <Button
                        android:id="@+id/more_btn1"
                        android:text="@string/knowMore"
                        android:textColor="#5207E8"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:onClick="openLink"
                        android:background="@android:color/transparent"/>

                    <Button
                        android:id="@+id/share_button1"
                        android:text="@string/share"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:onClick="shareData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonshape"/>



                </LinearLayout>




            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_margin="15dp"
            app:cardElevation="15dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:background="@drawable/gradient_back"
                    android:layout_height="170dp">

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="18dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="16dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:weightSum="9"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:src="@android:drawable/ic_media_play" />

                    <Button
                        android:id="@+id/more_btn2"
                        android:text="@string/knowMore"
                        android:textColor="#5207E8"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:onClick="openLink"
                        android:background="@android:color/transparent"/>
                    <Button
                        android:id="@+id/share_button2"
                        android:text="@string/share"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:onClick="shareData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonshape"/>



                </LinearLayout>




            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_margin="15dp"
            app:cardElevation="15dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:background="@drawable/gradient_back"
                    android:layout_height="170dp">

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="18dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="16dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:weightSum="9"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:src="@android:drawable/ic_media_play" />

                    <Button
                        android:id="@+id/more_btn3"
                        android:text="@string/knowMore"
                        android:textColor="#5207E8"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:onClick="openLink"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"/>

                    <Button
                        android:id="@+id/share_button3"
                        android:text="@string/share"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:onClick="shareData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonshape"/>



                </LinearLayout>




            </LinearLayout>


        </android.support.v7.widget.CardView>





        <Button
            android:id="@+id/more"
            android:text="More"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:background="@drawable/buttonshape"
            />


    </LinearLayout>

</ScrollView>